--- a/roles/api/templates/torchserve.service.j2
+++ b/roles/api/templates/torchserve.service.j2
@@ -10,7 +10,7 @@ Environment="LOG_LOCATION={{ log_dir }}/api"
 WorkingDirectory={{ api_dir }}
 Restart=always
 RestartSec=5
-ExecStart={{ api_virtualenv_dir }}/bin/torchserve --start --no-config-snapshots --model-store {{ data_dir }}/model_store
+ExecStart={{ api_virtualenv_dir }}/bin/torchserve --start --model-store {{ data_dir }}/model_store
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop={{ api_virtualenv_dir }}/bin/torchserve --stop
 
