--- a/roles/web/templates/model_store.j2
+++ b/roles/web/templates/model_store.j2
@@ -24,13 +24,13 @@ server {
   charset utf-8;
   client_max_body_size 400M;
 
-  ssl_certificate {{ certificate_dir }}/fullchain.pem;
-  ssl_certificate_key {{ certificate_dir }}/privkey.pem;
+  ssl_certificate {{ certificate_dir }}-0001/fullchain.pem;
+  ssl_certificate_key {{ certificate_dir }}-0001/privkey.pem;
 
   ssl_session_timeout 1d;
   ssl_session_cache shared:SSL:50m;
 
-  ssl_dhparam {{ certificate_dir }}/dhparam.pem;
+  ssl_dhparam {{ certificate_dir }}-0001/dhparam.pem;
 
   ssl_protocols TLSv1.2;
   ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
